# bigvision_x_zomato

./: .env.example  .gitignore  Makefile  README.md  autolunch_prd.md  pyproject.toml  setup_autolunch.py
autolunch/: __init__.py  api.py  cli.py
autolunch/config/: __init__.py  settings.py
autolunch/core/: __init__.py  exceptions.py  logging.py
autolunch/models/: __init__.py  memory.py  preferences.py  restaurant.py
autolunch/repositories/: __init__.py  base.py  memory_repo.py  preferences_repo.py
autolunch/services/: __init__.py
autolunch/services/llm/: __init__.py  engine.py  prompts.py
autolunch/services/sheets/: __init__.py  logger.py
autolunch/services/slack/: __init__.py  notifier.py
autolunch/services/zomato/: __init__.py  client.py  mock_server.py  models.py  real_mcp_client.py
data/: memory.json  preferences.json  zomato_oauth.json
n8n/: workflow.json
scripts/: exchange_token.py  run.sh  test_decision_engine.py  test_openrouter.py  test_zomato_client.py
tests/: conftest.py  test_api.py  test_engine.py  test_models.py  test_prompts.py  test_repositories.py  test_zomato_mock.py
